# ros2-gst-meta

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
.github/workflows/: ci.yml  release.yml
examples/: README.md  pipeline_demo.sh
include/ros2_gst_meta/: ros2_lifecycle.hpp  serialized_meta.hpp  sync_buffer.hpp
src/: plugin.cpp  ros2_attach.cpp  ros2_detach.cpp  ros2_meta_print.cpp
test/: e2e_test.sh  test_edge_cases.cpp  test_fuzz.cpp  test_sync_buffer.cpp
