<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_gst_meta</name>
  <version>0.1.0</version>
  <description>
    ROS 2 ↔ GStreamer metadata bridge.
    Subscribes to any ROS 2 topic at runtime and attaches the serialized
    message as GStreamer buffer metadata for downstream processing.
  </description>
  <maintainer email="pavel@guzenfeld.dev">Pavel Guzenfeld</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
